# cms_using-flask

./: .env  MANIFEST.in  setup.cfg
CMS.egg-info/: PKG-INFO  SOURCES.txt
cms/: .env  __init__.py  manage.py
cms/migrations/versions/: 0797c93baed6_.py  805c612a4735_.py  a2dd174add0c_.py  aa8e2fc15974_.py  b89818d00982_.py  da3e86948e02_.py
cms/models/: AddtionalContent.py  Contact.py  Content.py  EdtionBudget.py  Events.py  MyTask.py  Photo.py  Resource.py  SocialMediaExcerpt.py  SocialMediaSchedule.py  StoryProposal.py  ThisWeekMinute.py  Users.py  WebsiteContent.py  opEd.py
cms/route/: addtionalContent.py  auth.py  column.py  contact.py  content.py  edtionBudget.py  events.py  main_landing.py  message.py  myTask.py  opEd.py  photo.py  resource.py  socialMediaExcerpt.py  socialMediaSchedule.py  storyProposal.py  thisWeekMinute.py  websiteContent.py
cms/templates/: base.html
cms/templates/auth/: auth_base.html  signIn.html  signUp.html
cms/templates/components/: creatContent.html  createColumn.html  createaddtionalContent.html  createcontact.html  createopEd.html  createvents.html  editColumn.html  editContact.html  editContent.html  editEdtionBuget.html  editEvent.html  editMyTask.html  editOpEd.html  editPhoto.html  editResourec.html  editSocialMediaExcerpet.html  editSocialMediaSchedule.html  editStoryProposal.html  editThisWeekMinute.html  editWebsiteContent.html  editaddtionalContent.html  main_landing.html  showAddtionalContent.html  showColumn.html  showContact.html  showContent.html  showEdtionBudget.html  showEvents.html  showMyTask.html  (+8 more)
(+2 files in other folders)
