[metadata]
name = CMS
version = 1.0.0
url = https://github.com/abiywasihun/
license = BSD-3-Clause
maintainer = Pallets
maintainer_email = abiywasihun0921@gmail.com
description = Content Managment System using Python.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    cms
